Changing keys and mongodb URL to consumo from Environment variables

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -4,3 +4,8 @@ development:
       database: wunderlist_develop
       hosts:
         - localhost:27017
+
+production:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
