--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,11 +1,30 @@
 development:
-  sessions:
+  clients:
     default:
-      database: wunderlist_develop
-      hosts:
-        - localhost:27017
+     # The standard MongoDB connection URI allows for easy
+     # replica set connection setup.
+     # Use environment variables or a config file to keep your
+     # credentials safe e.g. <%= ENV['MONGOLAB_URI'] %>.
+     uri: mongodb://localhost:27017/wunderlist_develop
 
+     options:
+       # The default timeout is 5, which is the time in seconds
+       # for a connection to time out.
+       # We recommend 15 because it allows for plenty of time
+       # in most operating environments.
+       connect_timeout: 15
 production:
-  sessions:
+  clients:
     default:
-      uri: <%= ENV['MONGOLAB_URI'] %>
+     # The standard MongoDB connection URI allows for easy
+     # replica set connection setup.
+     # Use environment variables or a config file to keep your
+     # credentials safe e.g. <%= ENV['MONGOLAB_URI'] %>.
+     uri: <%= ENV['MONGOLAB_URI'] %>
+
+     options:
+       # The default timeout is 5, which is the time in seconds
+       # for a connection to time out.
+       # We recommend 15 because it allows for plenty of time
+       # in most operating environments.
+       connect_timeout: 15
